--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-native-google-signin/google-signin": "^13.1.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "axios": "^1.9.0",
     "expo": "~52.0.31",
     "expo-auth-session": "~6.0.3",
     "expo-blur": "~14.0.3",
@@ -40,11 +41,12 @@
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
-    "firebase": "^11.3.0",
+    "firebase": "^11.7.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-gifted-charts": "^1.4.61",
     "react-native-material-you-colors": "^0.1.2",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "4.12.0",
@@ -52,7 +54,8 @@
     "react-native-svg": "9.8.5",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "13.12.5",
+    "sentiment": "^5.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
